encore une correction css

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -78,7 +78,12 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
   <body class={`min-h-[100svh] flex flex-col overflow-x-hidden ${Astro.props.layout ?? ""}`}>
        <div
     id="global-bg"
-    class="fixed inset-0 -z-20 bg-cover bg-center bg-no-repeat transition-opacity duration-500"
+    class="fixed inset-0
+    w-full
+    max-w-full
+    overflow-hidden
+    bg-center bg-cover bg-no-repeat
+    -z-20 transition-opacity duration-500"
   ></div>
 
     <Header />
