--- a/src/pages/certifications.astro
+++ b/src/pages/certifications.astro
@@ -19,7 +19,7 @@ const sortedCertifications = [...certifications].sort(
 
 <BaseLayout>
   <div
-    class="min-h-[100svh] w-full"
+    class="w-full"
   >
     <section class="px-4 py-20">
       <div class="max-w-6xl mx-auto">
