--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -3,8 +3,8 @@ import ReviewCard from "./ReviewCard.astro";
 import reviews from "@/data/reviews.json";
 ---
 
-<section id="reviews" class="py-20 ">
-  <div class="container mx-auto px-4">
+<section id="reviews" class="py-20 px-4 ">
+  <div class="container mx-auto ">
 
     <h2
       class=" glasstext-4xl font-bold text-center text-gray-900 dark:text-white mb-12"
