--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,17 @@ import Button from "../components/Button.astro";
 import SocialLinks from "../components/SocialLinks.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { Image } from "astro:assets";
+
 import portrait from "../assets/images/portrait.webp";
+import bgHeroDark from "../assets/images/bg-black1.webp";
+import bgHeroLight from "../assets/images/sakura-white.webp";
+import setup from "../assets/images/setup.webp";
+import portrait2 from "../assets/images/portrait2.webp";
+
 import TechCards from "../components/TechCards.astro";
 import ProjectCard from "../components/ProjectCard.astro";
 import allProjects from "../data/projects.json";
 import certifications from "../data/certifications.json";
-import setup from "../assets/images/setup.webp";
-import portrait2 from "../assets/images/portrait2.webp";
 import CertificationCard from "../components/CertificationCard.astro";
 import Reviews from "@/components/Reviews.astro";
 
@@ -29,27 +33,32 @@ const projects = [...allProjects]
   <div class="relative">
     <div class="relative w-full overflow-hidden">
       <!-- IMAGE HERO LIGHT (LCP) -->
-      <img
-        src="/background/sakura-white.webp"
+      <Image
+        src={bgHeroDark}
         alt=""
-        fetchpriority="high"
-        decoding="async"
-        class="absolute inset-0 w-full h-full object-cover -z-10 dark:hidden"
-      />
-
-      <!-- IMAGE HERO DARK (LCP) -->
-      <img
-        src="/background/bg-black1.webp"
-        alt=""
+        loading="eager"
         fetchpriority="high"
         decoding="async"
         class="absolute inset-0 w-full h-full object-cover -z-10 hidden dark:block"
+        sizes="(max-width: 768px) 100vw, 768px"
+      />
+
+      <Image
+        src={bgHeroLight}
+        alt=""
+        loading="eager"
+        fetchpriority="high"
+        decoding="async"
+        class="absolute inset-0 w-full h-full object-cover -z-10 dark:hidden"
+        sizes="(max-width: 768px) 100vw, 768px"
       />
 
       <!-- OVERLAY OPTIONNEL (gradient / voile) -->
       <div class="absolute inset-0 bg-white/30 dark:bg-black/50"></div>
       <!-- HERO CONTENT -->
-      <div class="relative w-full min-h-screen flex items-center justify-center overflow-hidden">
+      <div
+        class="relative w-full min-h-screen flex items-center justify-center overflow-hidden"
+      >
         <div
           class="text-center grid items-center flex-grow gap-4 max-w-4xl mx-auto"
         >
@@ -98,7 +107,7 @@ const projects = [...allProjects]
     <!-- Sections Container -->
     <div class="space-y-32 py-20">
       <!-- About Section -->
-      <section id="about" class="px-4 py-20">
+      <section id="about" class="px-4">
         <div class="max-w-6xl mx-auto">
           <div class="text-center section-inner">
             <h2 class="text-4xl font-bold mb-12">À propos de moi</h2>
@@ -178,7 +187,7 @@ const projects = [...allProjects]
       </section>
 
       <!-- Certifications Section -->
-      <section id="certifications" class="px-4 py-20">
+      <section id="certifications" class="px-4">
         <div class="max-w-6xl mx-auto">
           <h2 class="text-4xl font-bold text-center mb-12">Certifications</h2>
 
@@ -255,9 +264,9 @@ const projects = [...allProjects]
               class="flex flex-col xl:flex-row justify-center items-center gap-10 xl:gap-20"
             >
               <div
-                class="text-center flex flex-col items-center glass space-y-8"
+                class="text-center flex flex-col items-center mx-4 glass space-y-8"
               >
-                <div class="flex flex-col gap-4">
+                <div class="flex flex-col gap-4 ">
                   <a
                     class="text-md md:text-2xl p-3 mx-4"
                     href="mailto:lalicornecosmique62@gmail.com?subject=Contact depuis le site&body=Bonjour%20Isabelle,"
