dernier push avant prod

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,6 +68,7 @@ const projects = [...allProjects]
             class="rounded-full justify-self-center img-hero bordure-magique"
             width={200}
             height={200}
+            fetchpriority="high"
             sizes="(max-width: 768px) 192px, 256px"
             loading="eager"
             data-aos="fade-down"
