--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,7 +101,7 @@ const projects = [...allProjects]
             data-aos-duration="1200"
             data-aos-offset="200"
           >
-            Développeuse Web passionnée par les technologies modernes
+            Des sites web sur-mesure, rapides, accessibles et optimisés pour le référencement naturel.
           </p>
         </div>
       </div>
@@ -164,7 +164,6 @@ const projects = [...allProjects]
                 <p
                   class="text-xl"
                   data-aos="fade-left"
-                  
                 >
                   💡 Ce que j'aime le plus ? Trouver des solutions simples à des
                   problèmes complexes, et apporter une touche personnelle et
@@ -174,8 +173,7 @@ const projects = [...allProjects]
 
                 <p
                   class="text-xl"
-                  data-aos="fade-right"
-                 
+                  data-aos="fade-right" 
                 >
                   👉 Aujourd'hui, je suis à la recherche aussi bien d'un poste
                   salarié pour continuer à monter en compétences au sein d'une
